Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/d.Document_Conventions.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/d.Environmental.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/e.Tech Support & Warranty.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/f.Tech Support & Calibration.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/h.Unpacking & Setting Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/h2.Setting Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/i.Operating.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/03_Powering Up/b.Power Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/a.Introduction.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b.Connecting_2k.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b2.Starting & Closing Integris 2000.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b3.Installation Tests.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b4.Troubleshooting.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGR

--- a/Content/Resources/Stylesheets/AA_Integris-styles01.css
+++ b/Content/Resources/Stylesheets/AA_Integris-styles01.css
@@ -727,6 +727,8 @@ p.CautionStyle01
 		font-size: 2.5em;
 		line-height: 2.50em;
 		page-break-before: always;
+		font-weight: bold;
+		font-family: 'Century Gothic';
 	}
 
 	td.NOTE
@@ -749,12 +751,13 @@ p.CautionStyle01
 	h1.AA_Chpt_Heading1
 	{
 		background-color: #000080;
-		font-size: 2.5em;
-		line-height: 2.7em;
 		font-style: italic;
 		color: #ffdead;
-		font-weight: bold;
 		padding-left: 10px;
+		font-size: 2.80em;
+		border-radius: 5px;
+		font-weight: bolder;
+		font-family: 'Century Gothic';
 	}
 
 	h1.AA_h1_Appendix
@@ -773,8 +776,10 @@ p.CautionStyle01
 	h2.AA_Online_H2
 	{
 		background-color: #000080;
-		font-family: 'Century Gothic';
 		color: #ffdead;
+		font-family: 'Century Gothic';
+		font-weight: 800;
+		font-size: 1.60em;
 	}
 
 	table
@@ -941,7 +946,6 @@ h1.AA_Chpt_Heading1
 {
 	background-color: #000080;
 	color: #ffdead;
-	font-size: 1.50em;
 	font-style: italic;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
@@ -955,6 +959,8 @@ h1.AA_Chpt_Heading1
 	margin: 0;
 	line-height: 2em;
 	padding-left: 10px;
+	font-weight: bold;
+	font-size: 1.80em;
 }
 
 p.ForcePageBreak
