Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/a.Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/a1.UG_Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/a2.QSG_Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/a3.Help_Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/a4.Doc Info.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/b.Safety & Compliance.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/a.Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/03_Unpacking/c.Setting Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/03_Unpacking/e.Operating.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/03_Unpacking/g.Troubleshooting.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/a.Introduction.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b.Connecting_2k.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b2.Starting & Closing Integris 2000.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_

--- a/Content/Resources/Stylesheets/AA_Integris-styles01.css
+++ b/Content/Resources/Stylesheets/AA_Integris-styles01.css
@@ -222,6 +222,8 @@ p.ManualVersionNumber
 		font-size: 13pt;
 		font-weight: bold;
 		font-family: 'Century Gothic';
+		padding-top: 15px;
+		padding-bottom: 15px;
 	}
 
 	h4
@@ -693,8 +695,6 @@ p.CautionStyle01
 {
 	p
 	{
-		background-image: url('../Images/Caution_Sign01.jpg');
-		background-repeat: no-repeat;
 		font-size: 11pt;
 	}
 
@@ -1038,5 +1038,10 @@ h1.AA_h1_Screen
 	padding-right: 17px;
 	padding-top: 10px;
 	width: 100%;
+}
+
+MadCap|xref.Plain_FigRef01
+{
+	mc-format: '{paranumonly}';
 }
 
